WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47809
[Qt] QtTestBrowser: Prevent calling load() directly from loadFinished() in robot mode.
https://bugs.webkit.org/show_bug.cgi?id=47809
Summary
[Qt] QtTestBrowser: Prevent calling load() directly from loadFinished() in ro...
Jocelyn Turcotte
Reported
2010-10-18 03:35:59 PDT
[Qt] QtTestBrowser: Prevent calling load() directly from loadFinished() in robot mode.
Attachments
Patch
(4.53 KB, patch)
2010-10-18 03:37 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Patch
(4.55 KB, patch)
2010-10-19 01:53 PDT
,
Jocelyn Turcotte
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2010-10-18 03:37:57 PDT
Created
attachment 71018
[details]
Patch
Andreas Kling
Comment 2
2010-10-19 00:59:14 PDT
Comment on
attachment 71018
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=71018&action=review
Patch looks OK, but this makes me wonder: if starting a new load in direct response to loadFinished(bool) may cause crashes, shouldn't we be fixing that or documenting that fact?
> WebKitTools/QtTestBrowser/urlloader.cpp:96 > + --m_numFramesLoading;
We should ASSERT(m_numFramesLoading > 0); before this.
Jocelyn Turcotte
Comment 3
2010-10-19 01:53:08 PDT
Created
attachment 71142
[details]
Patch
Early Warning System Bot
Comment 4
2010-10-19 02:14:14 PDT
Attachment 71142
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/4446084
Andreas Kling
Comment 5
2010-10-19 02:39:56 PDT
Comment on
attachment 71142
[details]
Patch r=me, but don't forget to add the missing include. ;)
Jocelyn Turcotte
Comment 6
2010-10-19 03:37:00 PDT
Committed
r70044
: <
http://trac.webkit.org/changeset/70044
>
Jocelyn Turcotte
Comment 7
2010-10-19 08:39:17 PDT
Blocking 2.1 to get it cherry-picked. This patch only affect QtTestBrowser and picking it should involve no risk.
Ademar Reis
Comment 8
2010-10-19 10:17:48 PDT
Please block the candidates master bug, not the release critical (fixed). In practice the chances of being cherry-picked are almost the same - it all depends on the complexity and if it conflicts or not.
Ademar Reis
Comment 9
2010-10-27 14:38:50 PDT
Revision
r70044
cherry-picked into qtwebkit-2.1 with commit 4d3698b <
http://gitorious.org/webkit/qtwebkit/commit/4d3698b
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug