[Qt] QtTestBrowser: Prevent calling load() directly from loadFinished() in robot mode. https://bugs.webkit.org/show_bug.cgi?id=47809

Reviewed by Andreas Kling.

Connecting a call to load from the loadFinished signal can cause
re-entrance crashes in WebCore. This patch uses a timer to do so,
also giving some time to subsequent frames to finish loading.

* QtTestBrowser/urlloader.cpp:
(UrlLoader::UrlLoader):
(UrlLoader::loadNext):
(UrlLoader::checkIfFinished):
(UrlLoader::frameLoadStarted):
(UrlLoader::frameLoadFinished):
* QtTestBrowser/urlloader.h:

Canonical link: https://commits.webkit.org/60607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70044 268f45cc-cd09-0410-ab3c-d52691b4dbfc