WebKitTools/QtTestBrowser/urlloader.h
@@ -44,6 +44,14 @@ public:
 public slots:
     void loadNext();
 
+private slots:
+    void checkIfFinished();
+    void frameLoadStarted();
+    void frameLoadFinished();
+
+signals:
+    void pageLoadFinished();
+
 private:
     void loadUrlList(const QString& inputFileName);
     bool getUrl(QString& qstr);
@@ -56,6 +64,8 @@ private:
     int m_loaded;
     QTimer m_timeoutTimer;
     QTimer m_extraTimeTimer;
+    QTimer m_checkIfFinishedTimer;
+    int m_numFramesLoading;
 };
 
 #endif
